--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -109,6 +109,9 @@ $vimeo-color: #1ab7ea !default;
 $vine-color: #00bf8f !default;
 $youtube-color: #bb0000 !default;
 $xing-color: #006567 !default;
+$deltion-blue: #343469 !default;
+$deltion-orange: #f58220 !default;
+
 
 /* links */
 $link-color: mix(#000, $info-color, 20%) !default;
