--- a/_sass/minimal-mistakes/skins/_dark.scss
+++ b/_sass/minimal-mistakes/skins/_dark.scss
@@ -5,7 +5,7 @@
 /* Colors */
 $background-color: #252a34 !default;
 $text-color: #eaeaea !default;
-$primary-color: $deltion-blue !default;
+$primary-color: #f58220 !default;
 $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
